styles: fixing the width of video

--- a/apps/pattern-lab/src/_patterns/04-pages/80-pega-world/pega-world.twig
+++ b/apps/pattern-lab/src/_patterns/04-pages/80-pega-world/pega-world.twig
@@ -242,18 +242,17 @@
         <figure class="c-pw-stat-slideshow">
           <div class="c-pw-stat-slideshow-media">
             <div class="c-pw-stat-slideshow-media__embed">
-              <bolt-ratio  class="o-bolt-ratio">
-                <bolt-video
-                  data-setup="{&quot;techOrder&quot;: [&quot;Html5&quot;]}"
-                  video-id="5750064959001"
-                  player-id="r1CAdLzTW"
-                  account-id="1900410236"
-                  loop="true"
-                  autoplay="true"
-                  show-meta
-                  show-meta-title>
-                </bolt-video>
-              </bolt-ratio>
+              <bolt-video
+                data-setup="{&quot;techOrder&quot;: [&quot;Html5&quot;]}"
+                video-id="5750064959001"
+                player-id="r1CAdLzTW"
+                account-id="1900410236"
+                autoplay="true"
+                show-meta
+                show-meta-title>
+              </bolt-video>
+              {# <bolt-ratio class="o-bolt-ratio">
+              </bolt-ratio> #}
             </div>
 
             {# <video class="c-pw-stat-slideshow-media__video" poster="http://sandbox.thewikies.com/vfe-generator/images/big-buck-bunny_poster.jpg" src="http://media.w3.org/2010/05/bunny/trailer.ogv" preload loop>
@@ -265,60 +264,60 @@
                 <li class="c-pw-stat-list__item">
                   {% include "@bolt/headline.twig" with {
                     "size": "xxxlarge",
-                    "text": "1%",
+                    "text": "30% ~ 50%",
                     "tag": "div"
                   } only %}
                   {% include "@bolt/text.twig" with {
                     "size": "large",
-                    "text": "Percent of attendees rated PegaWorld 2017 good or excellent",
+                    "text": "of initial RPA projects fail, according to Ernst & Young",
                     "tag": "div"
                   } only %}
                 </li>
                 <li class="c-pw-stat-list__item">
                   {% include "@bolt/headline.twig" with {
                     "size": "xxxlarge",
-                    "text": "2%",
+                    "text": "93%",
                     "tag": "div"
                   } only %}
                   {% include "@bolt/text.twig" with {
                     "size": "large",
-                    "text": "Percent of leading organizations that attend PegaWorld year over year",
+                    "text": "of 2017 PegaWorld attendees visited the hands-on Tech Pavilion",
                     "tag": "div"
                   } only %}
                 </li>
                 <li class="c-pw-stat-list__item">
                   {% include "@bolt/headline.twig" with {
                     "size": "xxxlarge",
-                    "text": "3%",
+                    "text": "91%",
                     "tag": "div"
                   } only %}
                   {% include "@bolt/text.twig" with {
                     "size": "large",
-                    "text": "Percent of attendees rated PegaWorld 2017 good or excellent",
+                    "text": "of attendees rated networking at PegaWorld 2017 “good” or “excellent”",
                     "tag": "div"
                   } only %}
                 </li>
                 <li class="c-pw-stat-list__item">
                   {% include "@bolt/headline.twig" with {
                     "size": "xxxlarge",
-                    "text": "4%",
+                    "text": "86%",
                     "tag": "div"
                   } only %}
                   {% include "@bolt/text.twig" with {
                     "size": "large",
-                    "text": "Percent of leading organizations that attend PegaWorld year over year",
+                    "text": "of 2017 attendees plan on returning to PegaWorld 2018",
                     "tag": "div"
                   } only %}
                 </li>
                 <li class="c-pw-stat-list__item">
                   {% include "@bolt/headline.twig" with {
                     "size": "xxxlarge",
-                    "text": "5%",
+                    "text": "94%",
                     "tag": "div"
                   } only %}
                   {% include "@bolt/text.twig" with {
                     "size": "large",
-                    "text": "Percent of leading organizations that attend PegaWorld year over year",
+                    "text": "of attendees rated PegaWorld 2017 “good” or “excellent”",
                     "tag": "div"
                   } only %}
                 </li>
