--- a/apps/pattern-lab/src/_patterns/04-pages/80-pega-world/pega-world.scss
+++ b/apps/pattern-lab/src/_patterns/04-pages/80-pega-world/pega-world.scss
@@ -271,7 +271,7 @@ $bolt-pw-stat-slideshow-shadow-color: bolt-color(indigo, xdark);
   position: relative;
   margin-right: bolt-spacing(large) * -2;
   margin-left: bolt-spacing(large) * -2;
-  padding-bottom: 60%;
+  padding-bottom: 9 / 16 * 100%;
   overflow: hidden;
   border-width: 0 2rem 2rem 2rem;
   border-style: solid;
@@ -318,13 +318,18 @@ $bolt-pw-stat-slideshow-shadow-color: bolt-color(indigo, xdark);
     position: absolute !important;
     top: 50% !important;
     left: 50% !important;
+    width: 100%;
+    height: 100%;
     transform: translate(-50%, -50%) !important;
   }
 
   @include respond-to(medium) {
-    position: static;
-    padding-top: calc(#{bolt-v-spacing(large)} + 1rem);
-    padding-bottom: calc(#{bolt-v-spacing(large)} + 1rem);
+    position: relative;
+    top: auto;
+    left: auto;
+    height: calc(100% - #{bolt-v-spacing(large)*2} - 2rem);
+    margin-top: calc(#{bolt-v-spacing(large)*2} - 2rem);
+    margin-bottom: calc(#{bolt-v-spacing(large)*2} - 2rem);
 
     > * {
       width: 333% !important;
