PR Updates - Share -- remove `inline` param from demo (default is already set to false)

--- a/apps/pattern-lab/src/_patterns/02-components/share/00-share-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/share/00-share-docs.twig
@@ -5,8 +5,7 @@
       sources: ['facebook','twitter','linkedin'],
       email: true,
       copy: true,
-      visibility: 'visible',
-      inline: false
+      visibility: 'visible'
     } only %}
   {% endverbatim %}
 {% endset %}
