--- a/packages/components/bolt-copy-to-clipboard/src/copy-to-clipboard.scss
+++ b/packages/components/bolt-copy-to-clipboard/src/copy-to-clipboard.scss
@@ -4,34 +4,34 @@
 
 @import '@bolt/core';
 
-.js-bolt-copy-to-clipboard {
+.c-bolt-copy-to-clipboard__icon,
+.c-bolt-copy-to-clipboard__copied {
+  opacity: 0;
+  position: absolute;
+  pointer-events: none;
+}
+
+.c-bolt-copy-to-clipboard__icon {
+  transform: scale(0) rotate(0deg);
+}
+
+.c-bolt-copy-to-clipboard__copied {
+  pointer-events: none;
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  .c-bolt-link__text {
+    color: bolt-color(teal, dark);
+  }
+}
+
+.c-bolt-copy-to-clipboard {
   display: inline-block;
   position: relative;
 
-  .c-bolt-copy-to-clipboard__icon,
-  .c-bolt-copy-to-clipboard__copied {
-    opacity: 0;
-    position: absolute;
-    pointer-events: none;
-  }
-
-  .c-bolt-copy-to-clipboard__icon {
-    transform: scale(0) rotate(0deg);
-  }
-
-  .c-bolt-copy-to-clipboard__copied {
-    pointer-events: none;
-    display: inline-block;
-    position: absolute;
-    top: 0;
-    left: 0;
-
-    .c-bolt-link__text {
-      color: bolt-color(teal, dark);
-    }
-  }
-
-  &.copied {
+  &.is-copied {
     .c-bolt-copy-to-clipboard__default {
       opacity: 0;
       transition: opacity 0.5s ease;
@@ -53,7 +53,7 @@
     }
   }
 
-  &.copied.transitioning {
+  &.is-copied.is-transitioning {
     .c-bolt-copy-to-clipboard__icon {
       opacity: 0;
       transition: opacity 1s ease;
