--- a/packages/components/bolt-copy-to-clipboard/src/copy-to-clipboard.twig
+++ b/packages/components/bolt-copy-to-clipboard/src/copy-to-clipboard.twig
@@ -2,26 +2,20 @@
 
 {% set attributes = create_attribute(attributes|default({})) %}
 
-{% if text %}
-  {% set attributes = attributes.setAttribute("text", text) %}
-{% else %}
-  {% set attributes = attributes.setAttribute("text", "Copy Link") %}
-  {% set text = "Copy Link" %}
-{% endif %}
+{% set defaultText = "Copy Link" %}
+{% set text = text | default(defaultText) %}
+{% set attributes = attributes.setAttribute("text", text) %}
 
-{% if copiedText %}
-  {% set attributes = attributes.setAttribute("copied-text", copiedText) %}
-{% else %}
-  {% set attributes = attributes.setAttribute("copied-text", "Copied!") %}
-  {% set copiedText = "Copied!" %}
-{% endif %}
+{% set defaultCopiedText = "Copied!" %}
+{% set copiedText = copiedText | default(defaultCopiedText) %}
+{% set attributes = attributes.setAttribute("copied-text", copiedText) %}
 
 {% if url %}
   {% set attributes = attributes.setAttribute("url", url) %}
 {% endif %}
 
 <bolt-{{ componentName }} bolt-component class="c-bolt-copy-to-clipboard js-bolt-copy-to-clipboard" {{ attributes }}>
-  <span class="c-bolt-copy-to-clipboard__default">
+  <span class="c-bolt-copy-to-clipboard__default js-bolt-copy-to-clipboard__default">
     {% include "@bolt-components-link/link.twig" with {
       text: text,
       url: url,
@@ -29,18 +23,19 @@
         name: 'asset-link',
         position: 'before'
       },
-      attributes: attributes.setAttribute('data-clipboard-text', url)
+      attributes: attributes.setAttribute('data-clipboard-text', url).setAttribute('target', '_blank')
     } only %}
   </span>
   <bolt-icon class="c-bolt-copy-to-clipboard__icon" name="refresh"></bolt-icon>
-  <span class="c-bolt-copy-to-clipboard__copied">
+  <span class="c-bolt-copy-to-clipboard__copied js-bolt-copy-to-clipboard__copied">
     {% include "@bolt-components-link/link.twig" with {
       text: copiedText,
       url: url,
       icon: {
         name: 'asset-link',
         position: 'before'
-      }
+      },
+      attributes: attributes
     } only %}
   </span>
 </bolt-{{ componentName }}>
