fix: vertically align ratio object to prevent rare instances where images mis-match with background container

--- a/packages/global/styles/05-objects/objects-ratio/ratio.scss
+++ b/packages/global/styles/05-objects/objects-ratio/ratio.scss
@@ -5,6 +5,7 @@
 .o-bolt-ratio,
 bolt-ratio {
   display: inline-block;
+  vertical-align: middle; // Prevents the average background color from sometimes showing up unexpectedly due to the image being top aligned when it should have been vertically centered.
   position: relative;
   width: 100%;
   overflow: hidden; // Hide placeholder blurred images from leaking through
