fix: unquote alignment options of flag object so vertical alignment works as expected

--- a/packages/global/styles/05-objects/objects-flag/_objects-flag.scss
+++ b/packages/global/styles/05-objects/objects-flag/_objects-flag.scss
@@ -64,8 +64,8 @@ $bolt-flag-alignments: (
 // // Flag alignment
 @each $alignment, $value in $bolt-flag-alignments {
   .o-bolt-flag--#{$alignment} {
-    align-items: $value;
-    vertical-align: $alignment;
+    align-items: unquote($value);
+    vertical-align: unquote($alignment);
   }
 }
 
