--- a/packages/components/bolt-button/src/button.scss
+++ b/packages/components/bolt-button/src/button.scss
@@ -182,7 +182,7 @@ bolt-button[width='full@small'],
 
 /** Handle Button Icon Alignment + Before / After **/
 .c-bolt-link__text + .c-bolt-link__icon,
-.c-bolt-button__item-text + .c-bolt-button__icon {
+.c-bolt-button__item + .c-bolt-button__icon {
   @include bolt-margin-left(xxsmall);
 
   .c-bolt-button--icon-only & {
@@ -191,7 +191,7 @@ bolt-button[width='full@small'],
 }
 
 .c-bolt-link__icon + .c-bolt-link__text,
-.c-bolt-button__icon + .c-bolt-button__item-text {
+.c-bolt-button__icon + .c-bolt-button__item {
   @include bolt-margin-left(xsmall);
 
   .c-bolt-button--icon-only & {
