--- a/packages/components/bolt-button/src/button.scss
+++ b/packages/components/bolt-button/src/button.scss
@@ -205,5 +205,16 @@ bolt-button[width='full@small'],
   display: inline-flex;
   vertical-align: middle;
   align-self: center;
+  transition: transform $bolt-transition-ease 150ms;
   line-height: 1; // workaround so icons can be vertically aligned properly
+}
+
+
+.c-bolt-button:hover:not(.c-bolt-button--icon-only) .c-bolt-button__icon,
+.c-bolt-link:hover:not(.c-bolt-link--icon-only) .c-bolt-link__icon {
+  transform: translateX(1px);
+
+  &:first-child {
+    transform: translateX(-1px);
+  }
 }
