--- a/packages/global/styles/04-elements/_elements-hr.scss
+++ b/packages/global/styles/04-elements/_elements-hr.scss
@@ -5,4 +5,7 @@
 hr {
   opacity: 0.2;
   border-top-color: var(--bolt-theme-border, currentColor);
+  @include bolt-margin-top(medium);
+  @include bolt-margin-bottom(medium);
+  width: 100%;
 }
