refactor: rename brightcove meta to video meta

--- a/packages/components/bolt-video/src/_video-meta.scss
+++ b/packages/components/bolt-video/src/_video-meta.scss
@@ -5,11 +5,11 @@ $bolt-export-data: false !global;
 // Same as max-width of wrapper container
 $bolt-video-meta--max-width: bolt-breakpoint(xxlarge);
 
-.c-brightcove-meta {
+.c-bolt-video-meta {
   max-width: $bolt-video-meta--max-width;
 }
 
-.c-brightcove-meta__wrapper {
+.c-bolt-video-meta__wrapper {
   @include bolt-padding(medium, squished);
   @include bolt-font-size(xsmall);
 
