feat: adding ability to hide controls, loop, and autoplay videos

--- a/packages/components/bolt-video/src/_videojs-enhancements.scss
+++ b/packages/components/bolt-video/src/_videojs-enhancements.scss
@@ -112,3 +112,8 @@
 .vjs-social-overlay .vjs-social-title {
   white-space: normal;
 }
+
+// Hide close captions button
+.vjs-subs-caps-button {
+  display: none;
+}
