--- a/packages/components/bolt-video/src/video.scss
+++ b/packages/components/bolt-video/src/video.scss
@@ -169,3 +169,13 @@ bolt-video {
   position: relative;
   width: 100%;
 }
+
+.c-bolt-video--hide-controls {
+  .video-js .vjs-control-bar {
+    display: none;
+  }
+
+  .video-js {
+    pointer-events: none;
+  }
+}
