--- a/packages/components/bolt-video/src/video.scss
+++ b/packages/components/bolt-video/src/video.scss
@@ -12,122 +12,125 @@ bolt-video {
   display: block;
   width: 100%;
 
-  &.is-playing {
-    opacity: 1;
-  }
-
-  // Hide the metadata (which covers the controls) if the user is either
-  //   a) watching the video
-  //   b) potentially interacting with the video
+// Hide the metadata (which covers the controls) if the user is either
+//   a) watching the video
+//   b) potentially interacting with the video
   &:hover,
   &.is-playing,
   &:hover.is-paused {
     bolt-video-meta {
-      display: none;
+      transform: translate3d(0, 100%, 0);
+      opacity: 0;
     }
+  }
+
+  &[is-background-video]{
+    flex-grow: 1;
+    z-index: 20;
+    transition: opacity .3s ease, min-height .3s ease;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin-left: auto;
+    margin-right: auto;
+    position: absolute;
+    min-width: 100%;
+    max-width: none;
+    background-color: rgba(22, 26, 60, .8);
+    pointer-events: none;
+    opacity: 0;
+
+    .is-expanded & {
+      opacity: 1;
+      pointer-events: auto;
+    }
+
+    .video-js {
+      max-width: 1400px;
+      margin: 0 auto;
+      min-width: 0;
+      width: 100%;
+      background-color: transparent;
+      transition: all .4s ease;
+      width: 100%;
+      height: 100%;
+    }
+
   }
 }
 
-
-.c-bolt-video__inner {
-  margin: 0 auto;
-}
-
-
+/**
+  * 1. 90vw instead of 100vw so the video close button
+  * doesn't spill outside of the video container in IE 11 /
+  * on Windows
+  */
 .c-bolt-video {
+
   width: 100%;
   max-width: none;
-  perspective: 1200px;
-  perspective-origin: 80% 80%;
   z-index: bolt-z-index('tooltip');
   transition: transform .4s cubic-bezier(.645, 0, .355, 1);
+
   .video-js {
     width: 100%;
     height: 100%;
   }
-  /**
-    * 1. 90vw instead of 100vw so the video close button
-    * doesn't spill outside of the video container in IE 11 /
-    * on Windows
-    */
-  .c-bolt-background__video & {
+
+  &.c-bolt-video--background {
     display: block;
     position: relative;
-    width: 90vw;
-    height: 90vw * (9 / 16);
-    max-width: 100vh;
-    max-height: 100vh * (9 / 16);
+    max-width: calc(100% - #{bolt-spacing(large)});
+    max-height: 100%;
     margin: 0 auto;
-    @include respond-to(small) {
-      width: calc(90vw - #{bolt-spacing(large)});
-      /* [1] */
-      height: calc((90vw * (9 / 16)) - #{bolt-spacing(large)});
-      /* [1] */
+    height: 100%;
+
+    @media (max-width: (bolt-breakpoint(small) - 1px)) {
+      max-height: calc(100% - 40px);
+    }
+
+    @include respond-to(small){
+      max-width: calc(100vw - #{bolt-spacing(large) * 2});
+    }
+
+    @media screen and (min-width: 1400px){
+      max-width: calc(1400px - #{bolt-spacing(large) * 2});
     }
   }
 }
 
-.c-bolt-video__wrapper {
-  position: relative;
-  width: 100%;
-  pointer-events: none;
-  max-width: $bolt-video-wrapper--max-width;
-  margin: 0 auto;
-  transition: opacity 0.4s ease, visibility 0.1s ease;
-  opacity: 0;
-  visibility: hidden;
-  .is-expanded & {
-    opacity: 1;
-    visibility: visible;
-    pointer-events: auto;
-  }
-}
 
-.c-bolt-video__video-element {
-  background-color: #32325d;
-  display: block;
-  position: relative;
-  border-radius: 6px;
-  -webkit-mask-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAIAAACQd1PeAAAAGXRFW…9iZSBJbWFnZVJlYWR5ccllPAAAAA5JREFUeNpiYGBgAAgwAAAEAAGbA+oJAAAAAElFTkSuQmCC);
-  transition: border-radius 0.4s cubic-bezier(0.645, 0, 0.355, 1);
-  .is-collapsed & {
-    border-radius: 14px;
-  }
-}
-
-.c-bolt-video__button {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate3d(-50%, -50%, 0);
-}
 
 .c-bolt-video__close-button {
   color: bolt-color(orange);
   --bolt-theme-icon: bolt-color(orange);
-
   position: absolute;
   z-index: bolt-z-index('tooltip');
   top: bolt-spacing(xsmall);
   right: bolt-spacing(xsmall);
   transition: all 0.3s ease;
   opacity: 0; // Initial state before brightcove video player kicks in
+
   @include respond-to(small) {
     right: (bolt-spacing(large) / -2) - bolt-spacing(xsmall);
   }
+
+  &:hover {
+    opacity: 1;
+  }
+
+  &:active {
+    opacity: 0.6;
+  }
+
   .is-collapsed & {
     opacity: 0;
     pointer-events: none;
   }
+
   .is-expanded & {
     opacity: 0.8;
     pointer-events: auto;
-  }
-  &:hover {
-    opacity: 1;
-  }
-  &:active {
-    opacity: 0.6;
   }
 }
 
@@ -165,16 +168,11 @@ bolt-video {
   text-decoration: underline;
 }
 
-.c-bolt-video__close-wrapper {
-  position: relative;
-  width: 100%;
-}
 
 .c-bolt-video--hide-controls {
   .video-js .vjs-control-bar {
     display: none;
   }
-
   .video-js {
     pointer-events: none;
   }
