chore: commenting out original video attributes reassignment logic. no longer appears to be needed -- keeping around till we can test to 100% verify prior to fully removing

--- a/packages/components/bolt-video/src/_video-tag.twig
+++ b/packages/components/bolt-video/src/_video-tag.twig
@@ -1,7 +1,7 @@
 
 {% set attributes = create_attribute(attributes | default({})) %}
 
-{% if videoAttributes %}
+{# if videoAttributes %}
   {% set attributes = videoAttributes | merge(attributes) %}
 
   {% for key, value in videoAttributes %}
@@ -15,10 +15,7 @@
     {% endif %}
 
   {% endfor %}
-{% endif %}
-
-
-
+{% endif #}
 
 {# force HTML5 Only Rendering #}
 {% set attributes = attributes.setAttribute("data-setup", '{"techOrder": ["Html5"]}') %}
