PR Updates -- Tooltip

--- a/apps/pattern-lab/src/_patterns/02-components/tooltip/00-tooltip-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/tooltip/00-tooltip-docs.twig
@@ -14,12 +14,7 @@
         name: "close-open"
       }
     },
-    content: "Here is a tooltip! And it even comes with a button toggle!",
-    id: "tooltip-example-1",
-    type: "action",
-    position: "up",
-    noWrap: false,
-    spacing: "small"
+    content: "Here is a tooltip! And it even comes with a button toggle!"
   } only %}
   {% endverbatim %}
 {% endset %}
