--- a/apps/pattern-lab/src/_patterns/02-components/tooltip/05--tooltip.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/tooltip/05--tooltip.twig
@@ -8,12 +8,7 @@
       size: "medium"
     }
   },
-  content: "Here is a tooltip! And it even comes with a button toggle!",
-  id: "tooltip-example-1",
-  type: "action",
-  position: "up",
-  noWrap: false,
-  spacing: "small"
+  content: "Here is a tooltip! And it even comes with a button toggle!"
 } only %}
 <br /><br />
 {% include "@bolt-components-tooltip/tooltip.twig" with {
@@ -26,10 +21,6 @@
     }
   },
   content: 'Small piece of help text!',
-  id: "tooltip-example-2",
-  type: "help",
-  position: "down",
-  noWrap: true,
-  spacing: "small"
+  direction: "down"
 } only %}
 </div>
