--- a/apps/pattern-lab/src/_patterns/02-components/tooltip/10--tooltip-button.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/tooltip/10--tooltip-button.twig
@@ -13,12 +13,7 @@
       name: "close-open"
     }
   },
-  content: "Here is a tooltip! And it even comes with a button toggle!",
-  id: "tooltip-example-1",
-  type: "action",
-  position: "up",
-  noWrap: false,
-  spacing: "small"
+  content: "Here is a tooltip! And it even comes with a button toggle!"
 } only %}
 {% include "@bolt-components-tooltip/tooltip.twig" with {
   trigger: {
@@ -34,10 +29,6 @@
     }
   },
   content: "Here is a tooltip! And it even comes with a button toggle!",
-  id: "tooltip-example-2",
-  type: "action",
-  position: "down",
-  noWrap: false,
-  spacing: "small"
+  direction: "down"
 } only %}
 </div>
