--- a/apps/pattern-lab/src/_patterns/02-components/tooltip/00-tooltip-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/tooltip/00-tooltip-docs.twig
@@ -3,16 +3,8 @@
   {% verbatim %}
   {% include "@bolt-components-tooltip/tooltip.twig" with {
     trigger: {
-      type: "button",
-      text: "Trigger",
-      icon: {
-        name: "info-open",
-        size: "medium"
-      },
-      toggle: {
-        text: "Trigger",
-        name: "close-open"
-      }
+      type: "text",
+      text: "Trigger Text"
     },
     content: "Here is a tooltip! And it even comes with a button toggle!"
   } only %}
