Block List - Final PR updates & temporarily disable shadowDOM to unblock progress

--- a/packages/components/bolt-block-list/src/block-list.scss
+++ b/packages/components/bolt-block-list/src/block-list.scss
@@ -2,8 +2,7 @@
    Block List
 \* ------------------------------------ */
 
-//@import '@bolt/core';
-@import "@bolt/components-headline/src/all-headlines.scss"; // Pulls in '@bolt/core' with headlines
+@import '@bolt/core';
 
 // Register Custom Block Element
 @include bolt-register-element('bolt-block-list', 'block');
