--- a/packages/components/bolt-copy-to-clipboard/src/copy-to-clipboard.twig
+++ b/packages/components/bolt-copy-to-clipboard/src/copy-to-clipboard.twig
@@ -10,6 +10,10 @@
 {% set copiedText = copiedText | default(defaultCopiedText) %}
 {% set attributes = attributes.setAttribute("copied-text", copiedText) %}
 
+{% set defaultIconSize = "medium" %}
+{% set iconSize = iconSize | default(defaultIconSize) %}
+{% set attributes = attributes.setAttribute("icon-size", iconSize) %}
+
 {% if url %}
   {% set attributes = attributes.setAttribute("url", url) %}
 {% endif %}
@@ -21,19 +25,21 @@
       url: url,
       icon: {
         name: 'asset-link',
-        position: 'before'
+        position: 'before',
+        size: iconSize
       },
       attributes: attributes.setAttribute('data-clipboard-text', url).setAttribute('target', '_blank')
     } only %}
   </span>
-  <bolt-icon class="c-bolt-copy-to-clipboard__icon" name="refresh"></bolt-icon>
+  <bolt-icon class="c-bolt-copy-to-clipboard__icon" name="refresh" size={{ iconSize }}></bolt-icon>
   <span class="c-bolt-copy-to-clipboard__copied js-bolt-copy-to-clipboard__copied">
     {% include "@bolt-components-link/link.twig" with {
       text: copiedText,
       url: url,
       icon: {
         name: 'asset-link',
-        position: 'before'
+        position: 'before',
+        size: iconSize
       },
       attributes: attributes
     } only %}
