fix: Use down icon for select lists (BK-313)

--- a/packages/components/bolt-form/src/inputs/form-select.twig
+++ b/packages/components/bolt-form/src/inputs/form-select.twig
@@ -20,7 +20,7 @@
 
   {% if not attributes.multiple %}
 
-    {% set _icons = ["chevron-right"] %}
+    {% set _icons = ["chevron-down"] %}
 
     <div class="c-bolt-input-icons">
       {% include "@bolt/form-icons.twig" with {"icons": _icons } only %}
