fix: Disable inline form example until full work is complete (BK-313)

--- a/apps/pattern-lab/src/_patterns/02-components/form/_form-full-inline.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/form/_form-full-inline.twig
@@ -2,7 +2,7 @@
 
 {% set children %}
 
-  {# TODO: Add full support for inline fields #}
+  {# TODO: Add full support for inline fields, then rename this file to remove the leading underscore #}
   <div style="display: inline-block;">
     {% include "@bolt/form-element-demo-input-element.twig" with {
       title: "Email Address",
