--- a/apps/pattern-lab/src/_patterns/04-pages/80-pega-world/pega-world.twig
+++ b/apps/pattern-lab/src/_patterns/04-pages/80-pega-world/pega-world.twig
@@ -247,11 +247,8 @@
                 video-id="5750064959001"
                 player-id="r1CAdLzTW"
                 account-id="1900410236"
-                autoplay="true"
-                loop="true"
-                controls="false"
-                show-meta
-                show-meta-title>
+                autoplay
+                loop>
               </bolt-video>
             </div>
 
