Feature/bk 313 form styling updates (#531)
* feat: remove lock icon from disabled fields (BK-313)

* fix: remove hover state from disabled fields (BK-313)

* feat: Set form input error background color (BK-313)

* fix: Add default attributes object to checkboxes pattern (BK-313)

* feat: Add a form radios pattern (BK-313)

* fix: Fix broken checkboxes and radios demos, update to use new patterns

* feat: Set description font size to medium

Leave error font size as xsmall

* feat: Set font sizes (BK-313)

Set the font size on mobile devices to 16px for mobile Safari, but
smaller on bigger devices to match the preferred styling.

* fix: replace rem units with ems to scale checkboxes, etc, with font size

* fix: Ensure form inputs are same height as button (BK-313)

* chore: delete duplicate form checkbox demo

* docs: Add full campaign landing form demo (BK-313)

* fix: fix icon positioning across breakpoints (BDS-313)

* fix: Use down icon for select lists (BK-313)

* fix: Disable inline form example until full work is complete (BK-313)

--- a/packages/components/bolt-form/src/inputs/form-checkboxes.twig
+++ b/packages/components/bolt-form/src/inputs/form-checkboxes.twig
@@ -1,13 +1,24 @@
 {#
 /**
  * @file
- * Theme override for a 'checkboxes' #type form element.
+ * A wrapper for multiple checkbox input elements.
  *
  * Available variables
  * - attributes: A list of HTML attributes for the wrapper element.
  * - children: The rendered checkboxes.
+ *
+ * @see Drupal's checkboxes.html.twig
  */
 #}
+
+{#
+ !!!! WARNING !!!!
+ This template is currently extended verbatim in form-radios.twig.  If you need
+ to add checkbox-specific styling here, please refactor radios first-- consider
+ using something like a shared "container.twig" file (see Drupal form templates).
+#}
+
+{% set attributes = create_attribute(attributes | default({})) %}
 
 {% set classes = [
   'c-bolt-input-list',
