Share - WIP integration / styling work

--- a/apps/pattern-lab/src/_patterns/02-components/share/05-share.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/share/05-share.twig
@@ -1,10 +1,6 @@
 <div class="demo--share">
 {% include '@bolt-components-share/share.twig' with {
-  sources: ['facebook','twitter','linkedin'],
-  email: true,
-  copy: true,
-  visibility: 'visible',
-  inline: true
+  visibility: 'visible'
 } only %}
 </div>
 
