refactor: adding default custom element CSS block-level rules

--- a/packages/components/bolt-copy-to-clipboard/src/copy-to-clipboard.scss
+++ b/packages/components/bolt-copy-to-clipboard/src/copy-to-clipboard.scss
@@ -4,6 +4,10 @@
 
 @import '@bolt/core';
 
+bolt-copy-to-clipboard {
+  display: inline-block;
+}
+
 .c-bolt-copy-to-clipboard__icon,
 .c-bolt-copy-to-clipboard__copied {
   opacity: 0;
